tests/compile_fail/non-ident-arg.stderr
error: expect an identifier
 --> $DIR/non-ident-arg.rs:7:24
  |
7 |     fn push(&mut self, (a, b): (u8, u8)) -> usize;
  |                        ^^^^^^
